// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-625"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-629 makeStyles-root-626 makeStyles-root-628"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-639 makeStyles-input-627"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-645 makeStyles-noShrink-646"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root-1 MuiBox-root-2"
>
  <div
    className="MuiBox-root-1 MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Full Width
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root-21 MuiFab-root-33 makeStyles-root-29 MuiFab-extended-37 makeStyles-extended-30 MuiFab-secondary-36 makeStyles-secondary-32 MuiFab-sizeSmall-41 makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label-34"
      >
        <div
          className="MuiBox-root-1 MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root-1 MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root-52 MuiTypography-subtitle2-64 MuiTypography-colorTextPrimary-77"
          >
            Download
          </h6>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-92 MuiBox-root-93"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-126"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-127"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-128"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-129"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-131"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-132"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root-133 MuiBox-root-134"
>
  <div
    className="MuiBox-root-133 MuiBox-root-135"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-136"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root-133 MuiBox-root-141"
  >
    <div
      className="MuiBox-root-133 MuiBox-root-142"
    >
      <img
        alt="Download"
        className="makeStyles-root-136"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-143 MuiBox-root-144"
>
  <div
    className="MuiBox-root-143 MuiBox-root-145"
  >
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 MuiTypography-colorPrimary-171 makeStyles-inline-146"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 makeStyles-inline-146"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-178"
  >
    <h6
      className="MuiTypography-root-148 MuiTypography-h6-158"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-179"
  />
  <div
    className="MuiBox-root-143 MuiBox-root-180"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-181"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-186 MuiBox-root-187"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-218 MuiIconButton-root-209 PrivateSwitchBase-root-205 MuiSwitch-switchBase-197 MuiSwitch-colorPrimary-198"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-217"
          >
            <span
              className="MuiSwitch-thumb-203"
            />
            <input
              className="PrivateSwitchBase-input-208 MuiSwitch-input-202"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-204"
        />
      </span>
      <span
        className="MuiTypography-root-221 MuiTypography-body1-223 MuiFormControlLabel-label-193"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-186 MuiBox-root-251"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-218 MuiIconButton-root-209 PrivateSwitchBase-root-205 MuiSwitch-switchBase-197 MuiSwitch-colorPrimary-198"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-217"
          >
            <span
              className="MuiSwitch-thumb-203"
            />
            <input
              className="PrivateSwitchBase-input-208 MuiSwitch-input-202"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-204"
        />
      </span>
      <span
        className="MuiTypography-root-221 MuiTypography-body1-223 MuiFormControlLabel-label-193"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-345 MuiBox-root-346"
  >
    <div
      className="MuiBox-root-345 MuiBox-root-347"
    >
      <div
        className="MuiBox-root-345 MuiBox-root-348"
      >
        <button
          className="MuiButtonBase-root-366 MuiButton-root-349 MuiButton-contained-357 MuiButton-containedPrimary-358"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-350"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-371 MuiTypography-body1-373"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-371 MuiTypography-body2-372 MuiPaper-root-412 MuiPaper-elevation6-420 MuiSnackbarContent-root-409 makeStyles-info-403"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-410"
        >
          <div
            className="MuiBox-root-345 MuiBox-root-439 makeStyles-message-407"
          >
            <div
              className="makeStyles-iconBackground-408"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-440"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-371 MuiTypography-subtitle1-382 makeStyles-info-403"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-411"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-366 MuiIconButton-root-445 MuiIconButton-colorSecondary-450"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-453"
            >
              <img
                alt="Close"
                className="makeStyles-root-440"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-345 MuiBox-root-454"
    >
      <div
        className="MuiBox-root-345 MuiBox-root-455"
      >
        <button
          className="MuiButtonBase-root-366 MuiButton-root-349 MuiButton-contained-357 MuiButton-containedPrimary-358"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-350"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-371 MuiTypography-body1-373"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-371 MuiTypography-body2-372 MuiPaper-root-412 MuiPaper-elevation6-420 MuiSnackbarContent-root-409 makeStyles-warning-404"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-410"
        >
          <div
            className="MuiBox-root-345 MuiBox-root-456 makeStyles-message-407"
          >
            <div
              className="makeStyles-iconBackground-408"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-440"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-371 MuiTypography-subtitle1-382 makeStyles-warning-404"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-411"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-366 MuiIconButton-root-445 MuiIconButton-colorSecondary-450"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-453"
            >
              <img
                alt="Close"
                className="makeStyles-root-440"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-345 MuiBox-root-457"
    >
      <div
        className="MuiBox-root-345 MuiBox-root-458"
      >
        <button
          className="MuiButtonBase-root-366 MuiButton-root-349 MuiButton-contained-357 MuiButton-containedPrimary-358"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-350"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-371 MuiTypography-body1-373"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-371 MuiTypography-body2-372 MuiPaper-root-412 MuiPaper-elevation6-420 MuiSnackbarContent-root-409 makeStyles-error-402"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-410"
        >
          <div
            className="MuiBox-root-345 MuiBox-root-459 makeStyles-message-407"
          >
            <div
              className="makeStyles-iconBackground-408"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-440"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-371 MuiTypography-subtitle1-382 makeStyles-error-402"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-411"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-366 MuiIconButton-root-445 MuiIconButton-colorSecondary-450"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-453"
            >
              <img
                alt="Close"
                className="makeStyles-root-440"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-262 MuiBox-root-263"
  >
    <div
      className="makeStyles-container-265"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-268"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-262 MuiBox-root-273"
  >
    <p
      className="MuiTypography-root-276 MuiTypography-body1-278 makeStyles-inline-274"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-265"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-268"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-308 MuiTypography-h4-316"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-308 MuiTypography-h5-317"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-h6-318"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-308 MuiTypography-body1-310"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-308 MuiTypography-body2-309"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle2-320"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle2-320 MuiTypography-colorPrimary-331 makeStyles-inline-306"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle2-320 makeStyles-inline-306"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-471 MuiFormControl-marginNormal-472 MuiTextField-root-470"
  >
    <label
      className="MuiFormLabel-root-487 MuiInputLabel-root-475 MuiInputLabel-formControl-481 MuiInputLabel-animated-484 MuiInputLabel-shrink-483"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-507 MuiOutlinedInput-root-494 MuiInputBase-formControl-508"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-523 MuiOutlinedInput-notchedOutline-501"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="PrivateNotchedOutline-legend-524"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-517 MuiOutlinedInput-input-502"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-525 MuiBox-root-526"
  >
    <div
      className="makeStyles-dropdown-527"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-507 makeStyles-root-528 makeStyles-root-530"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-517 makeStyles-input-529"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-531 makeStyles-noShrink-532"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-553 MuiButtonBase-disabled-554 MuiButton-root-536 MuiButton-contained-544 MuiButton-containedPrimary-545 MuiButton-disabled-548"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-537"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-556 MuiBox-root-557"
>
  <div
    className="MuiBox-root-556 MuiBox-root-558"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiFormLabel-error-579 MuiInputLabel-error-567 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-error-602 MuiOutlinedInput-error-588 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-614 MuiFormHelperText-contained-618 MuiFormHelperText-error-615"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-622"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-623"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiFormLabel-disabled-578 MuiInputLabel-disabled-566 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-disabled-599 MuiOutlinedInput-disabled-585 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591 MuiInputBase-disabled-599 MuiOutlinedInput-disabled-585"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-624"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-650 MuiBox-root-651"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-654 MuiTypography-h4-662 MuiTypography-colorPrimary-677 makeStyles-inline-652"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-654 MuiTypography-h4-662 makeStyles-inline-652"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-650 MuiBox-root-684"
  />
  <form
    onSubmit={[Function]}
  >
    <div
      className="makeStyles-dropdown-685"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-689 makeStyles-root-686 makeStyles-root-688"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-699 makeStyles-input-687"
          name="SELECT_FIELD_ATTR"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-705 makeStyles-noShrink-706"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </form>
  <div
    className="MuiBox-root-650 MuiBox-root-710"
  />
  <div
    className="MuiBox-root-650 MuiBox-root-711"
  >
    <div
      className="MuiBox-root-650 MuiBox-root-712"
    >
      acc
    </div>
    <div
      className="MuiBox-root-650 MuiBox-root-713"
    >
      acc
    </div>
    <div
      className="MuiBox-root-650 MuiBox-root-714"
    >
      acc
    </div>
  </div>
  <div
    className="MuiBox-root-650 MuiBox-root-715"
  />
  <div
    className="MuiBox-root-650 MuiBox-root-716"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-705"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-724 MuiBox-root-725"
  id="/login"
>
  <div
    className="MuiBox-root-724 MuiBox-root-726"
  >
    <h4
      className="MuiTypography-root-729 MuiTypography-h4-737 MuiTypography-colorPrimary-752 makeStyles-inline-727"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-729 MuiTypography-h4-737 makeStyles-inline-727"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root-724 MuiBox-root-759"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-724 MuiBox-root-760"
      >
        <div
          className="MuiFormControl-root-762 MuiFormControl-marginNormal-763 MuiFormControl-fullWidth-765 MuiTextField-root-761"
        >
          <div
            className="MuiInputBase-root-779 MuiOutlinedInput-root-766 MuiInputBase-fullWidth-788 MuiInputBase-formControl-780"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-795 MuiOutlinedInput-notchedOutline-773"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-796"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-789 MuiOutlinedInput-input-774"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-724 MuiBox-root-797"
      >
        <div
          className="MuiBox-root-724 MuiBox-root-798"
        >
          <button
            className="MuiButtonBase-root-816 MuiButtonBase-disabled-817 MuiButton-root-799 MuiButton-contained-807 MuiButton-containedPrimary-808 MuiButton-disabled-811 MuiButton-fullWidth-815"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-800"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-724 MuiBox-root-819"
    >
      <div
        className="MuiBox-root-724 MuiBox-root-820"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-729 MuiTypography-subtitle2-741 MuiTypography-colorPrimary-752 makeStyles-inline-727 makeStyles-link-728"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-724 MuiBox-root-821"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-729 MuiTypography-subtitle2-741 MuiTypography-colorPrimary-752 makeStyles-inline-727 makeStyles-link-728"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-724 MuiBox-root-822"
  />
  <div
    className="MuiBox-root-724 MuiBox-root-823"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-824"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-829 MuiBox-root-830"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-829 MuiBox-root-831"
  >
    <h4
      className="MuiTypography-root-834 MuiTypography-h4-842 MuiTypography-colorPrimary-857 makeStyles-inline-832"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-834 MuiTypography-h4-842 makeStyles-inline-832"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-829 MuiBox-root-864"
  >
    <div
      className="MuiBox-root-829 MuiBox-root-865"
    >
      <h6
        className="MuiTypography-root-834 MuiTypography-subtitle2-846"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root-829 MuiBox-root-866"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root-881 MuiFab-root-871 makeStyles-root-867 MuiFab-extended-875 makeStyles-extended-868 MuiFab-secondary-874 makeStyles-secondary-870 MuiFab-sizeSmall-879 makeStyles-sizeSmall-869"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label-872"
        >
          <div
            className="MuiBox-root-829 MuiBox-root-884"
          >
            <img
              alt="Download"
              className="makeStyles-root-885"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root-829 MuiBox-root-890"
          >
            <h6
              className="MuiTypography-root-834 MuiTypography-subtitle2-846 MuiTypography-colorTextPrimary-859"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-829 MuiBox-root-891"
    >
      <p
        className="MuiTypography-root-834 MuiTypography-body1-836 makeStyles-inline-832"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-829 MuiBox-root-892"
    >
      <div
        className="MuiBox-root-829 MuiBox-root-893"
      >
        <button
          className="MuiButtonBase-root-881 MuiButton-root-894 MuiButton-text-896 MuiButton-textPrimary-897 MuiButton-fullWidth-910"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-895"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-829 MuiBox-root-911"
  />
  <div
    className="MuiBox-root-829 MuiBox-root-912"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-885"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-923 MuiBox-root-924"
  id="/signup1"
>
  <div
    className="MuiBox-root-923 MuiBox-root-925"
  >
    <h4
      className="MuiTypography-root-928 MuiTypography-h4-936 MuiTypography-colorPrimary-951 makeStyles-inline-926"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-928 MuiTypography-h4-936 makeStyles-inline-926"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-923 MuiBox-root-958"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-923 MuiBox-root-959"
      >
        <div
          className="MuiFormControl-root-961 MuiFormControl-marginNormal-962 MuiFormControl-fullWidth-964 MuiTextField-root-960"
        >
          <label
            className="MuiFormLabel-root-977 MuiFormLabel-required-982 MuiInputLabel-required-969 MuiInputLabel-root-965 MuiInputLabel-formControl-971 MuiInputLabel-animated-974 MuiInputLabel-shrink-973"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-983 MuiInputLabel-asterisk-970"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-997 MuiOutlinedInput-root-984 MuiInputBase-fullWidth-1006 MuiInputBase-formControl-998"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1013 MuiOutlinedInput-notchedOutline-991"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1014"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1007 MuiOutlinedInput-input-992"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-923 MuiBox-root-1015"
      >
        <div
          className="MuiFormControl-root-961 MuiFormControl-marginNormal-962 MuiFormControl-fullWidth-964 MuiTextField-root-960"
        >
          <label
            className="MuiFormLabel-root-977 MuiFormLabel-required-982 MuiInputLabel-required-969 MuiInputLabel-root-965 MuiInputLabel-formControl-971 MuiInputLabel-animated-974 MuiInputLabel-shrink-973"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-983 MuiInputLabel-asterisk-970"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-997 MuiOutlinedInput-root-984 MuiInputBase-fullWidth-1006 MuiInputBase-formControl-998"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1013 MuiOutlinedInput-notchedOutline-991"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1014"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1007 MuiOutlinedInput-input-992"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-923 MuiBox-root-1016"
      >
        <div
          className="MuiFormControl-root-961 MuiFormControl-marginNormal-962 MuiFormControl-fullWidth-964 MuiTextField-root-960"
        >
          <label
            className="MuiFormLabel-root-977 MuiFormLabel-required-982 MuiInputLabel-required-969 MuiInputLabel-root-965 MuiInputLabel-formControl-971 MuiInputLabel-animated-974 MuiInputLabel-shrink-973"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-983 MuiInputLabel-asterisk-970"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-997 MuiOutlinedInput-root-984 MuiInputBase-fullWidth-1006 MuiInputBase-formControl-998"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1013 MuiOutlinedInput-notchedOutline-991"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1014"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1007 MuiOutlinedInput-input-992"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-923 MuiBox-root-1017"
      >
        <div
          className="MuiBox-root-923 MuiBox-root-1018"
        >
          <button
            className="MuiButtonBase-root-1036 MuiButton-root-1019 MuiButton-text-1021 MuiButton-textPrimary-1022 MuiButton-fullWidth-1035"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1020"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-923 MuiBox-root-1039"
        >
          <button
            className="MuiButtonBase-root-1036 MuiButtonBase-disabled-1037 MuiButton-root-1019 MuiButton-contained-1027 MuiButton-containedPrimary-1028 MuiButton-disabled-1031 MuiButton-fullWidth-1035"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-1020"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-923 MuiBox-root-1040"
  />
  <div
    className="MuiBox-root-923 MuiBox-root-1041"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1042"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1057 MuiBox-root-1058"
  id="/signup2"
>
  <div
    className="MuiBox-root-1057 MuiBox-root-1059"
  >
    <h4
      className="MuiTypography-root-1062 MuiTypography-h4-1070 MuiTypography-colorPrimary-1085 makeStyles-inline-1060"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1062 MuiTypography-h4-1070 makeStyles-inline-1060"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1057 MuiBox-root-1092"
  >
    <div
      className="MuiBox-root-1057 MuiBox-root-1093"
    >
      <div
        className="MuiBox-root-1057 MuiBox-root-1094"
      >
        <div
          className="MuiBox-root-1057 MuiBox-root-1095"
        >
          <h6
            className="MuiTypography-root-1062 MuiTypography-subtitle2-1074 makeStyles-inline-1060"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1097"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1100"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1105"
      >
        <span
          className="MuiSwitch-root-1111"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1135 MuiIconButton-root-1126 PrivateSwitchBase-root-1122 MuiSwitch-switchBase-1114 MuiSwitch-colorPrimary-1115"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1134"
            >
              <span
                className="MuiSwitch-thumb-1120"
              />
              <input
                className="PrivateSwitchBase-input-1125 MuiSwitch-input-1119"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1121"
          />
        </span>
        <span
          className="MuiTypography-root-1062 MuiTypography-body1-1064 MuiFormControlLabel-label-1110"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1057 MuiBox-root-1138"
    >
      <p
        className="MuiTypography-root-1062 MuiTypography-body1-1064 makeStyles-inline-1060"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-1057 MuiBox-root-1139"
    >
      <div
        className="MuiBox-root-1057 MuiBox-root-1140"
      >
        <button
          className="MuiButtonBase-root-1135 MuiButton-root-1141 MuiButton-text-1143 MuiButton-textPrimary-1144 MuiButton-fullWidth-1157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1142"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1057 MuiBox-root-1158"
      >
        <button
          className="MuiButtonBase-root-1135 MuiButton-root-1141 MuiButton-contained-1149 MuiButton-containedPrimary-1150 MuiButton-fullWidth-1157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1142"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1057 MuiBox-root-1159"
  />
  <div
    className="MuiBox-root-1057 MuiBox-root-1160"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1100"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1171 MuiBox-root-1172"
  id="/signup3"
>
  <div
    className="MuiBox-root-1171 MuiBox-root-1173"
  >
    <h4
      className="MuiTypography-root-1176 MuiTypography-h4-1184 MuiTypography-colorPrimary-1199 makeStyles-inline-1174"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1176 MuiTypography-h4-1184 makeStyles-inline-1174"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1171 MuiBox-root-1206"
  >
    <h6
      className="MuiTypography-root-1176 MuiTypography-subtitle1-1187 makeStyles-inline-1174"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1171 MuiBox-root-1207"
      >
        <div
          className="MuiFormControl-root-1209 MuiFormControl-marginNormal-1210 MuiFormControl-fullWidth-1212 MuiTextField-root-1208"
        >
          <div
            className="MuiInputBase-root-1226 MuiOutlinedInput-root-1213 MuiInputBase-fullWidth-1235 MuiInputBase-formControl-1227"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1242 MuiOutlinedInput-notchedOutline-1220"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1243"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1236 MuiOutlinedInput-input-1221"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1171 MuiBox-root-1244"
      >
        <div
          className="MuiBox-root-1171 MuiBox-root-1245"
        >
          <button
            className="MuiButtonBase-root-1263 MuiButton-root-1246 MuiButton-text-1248 MuiButton-textPrimary-1249 MuiButton-fullWidth-1262"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1247"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1171 MuiBox-root-1266"
        >
          <button
            className="MuiButtonBase-root-1263 MuiButton-root-1246 MuiButton-contained-1254 MuiButton-containedPrimary-1255 MuiButton-fullWidth-1262"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1247"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1171 MuiBox-root-1267"
  />
  <div
    className="MuiBox-root-1171 MuiBox-root-1268"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1269"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1284 MuiBox-root-1285"
  id="/welcome"
>
  <div
    className="MuiBox-root-1284 MuiBox-root-1286"
  >
    <h4
      className="MuiTypography-root-1289 MuiTypography-h4-1297 MuiTypography-colorPrimary-1312 makeStyles-inline-1287"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1289 MuiTypography-h4-1297 makeStyles-inline-1287"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1284 MuiBox-root-1319"
  >
    <p
      className="MuiTypography-root-1289 MuiTypography-body1-1291 makeStyles-inline-1287"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1284 MuiBox-root-1320"
    />
    <button
      className="MuiButtonBase-root-1338 MuiButton-root-1321 MuiButton-contained-1329 MuiButton-containedPrimary-1330 MuiButton-fullWidth-1337"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1322"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1284 MuiBox-root-1341"
    />
    <button
      className="MuiButtonBase-root-1338 MuiButton-root-1321 MuiButton-contained-1329 MuiButton-containedPrimary-1330 MuiButton-fullWidth-1337"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1322"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1284 MuiBox-root-1342"
    />
    <button
      className="MuiButtonBase-root-1338 MuiButton-root-1321 MuiButton-contained-1329 MuiButton-containedPrimary-1330 MuiButton-fullWidth-1337"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1322"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1284 MuiBox-root-1343"
  />
  <div
    className="MuiBox-root-1284 MuiBox-root-1344"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1345"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
